<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bttTV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8EAE5"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/cckTv3"
        android:layout_width="184dp"
        android:layout_height="66dp"
        android:layout_marginBottom="588dp"
        android:gravity="center"
        android:text="@string/Ck2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PtTv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tbTv2"
        android:layout_width="184dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/tb"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <EditText
        android:id="@+id/ptTv"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="#EDB767"
        android:ellipsize="middle"
        android:ems="10"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/pt"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/tvTV"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/rs"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTv2" />

    <Button
        android:id="@+id/bttTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="132dp"
        android:background="#EAD1AD"
        android:gravity="center"
        android:text="@string/pn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTV" />
</androidx.constraintlayout.widget.ConstraintLayout>